aya-parser/src/snapshots/aya_parser__common__tests__exported_data_16.snap
---
source: aya-parser/src/common.rs
expression: result
---
Data {
    name: "some_name",
    size: 16,
    exported: true,
    values: [
        HexLiteral(
            "0102",
        ),
        HexLiteral(
            "0304",
        ),
    ],
}
