aya-parser/src/snapshots/aya_parser__common__tests__exported_data_8.snap
---
source: aya-parser/src/common.rs
expression: result
---
Data {
    name: "some_name",
    size: 8,
    exported: true,
    values: [
        HexLiteral(
            "01",
        ),
        HexLiteral(
            "02",
        ),
        HexLiteral(
            "03",
        ),
        HexLiteral(
            "04",
        ),
    ],
}
