aya-parser/src/snapshots/aya_parser__common__tests__private_const.snap
---
source: aya-parser/src/common.rs
expression: result
---
Const {
    name: "some_name",
    exported: false,
    value: HexLiteral(
        "0102",
    ),
}
