aya-parser/src/snapshots/aya_parser__common__tests__private_data_8.snap
---
source: aya-parser/src/common.rs
expression: result
---
Data {
    name: "some_name",
    size: 8,
    exported: false,
    values: [
        HexLiteral(
            "01",
        ),
        HexLiteral(
            "02",
        ),
        HexLiteral(
            "03",
        ),
        HexLiteral(
            "04",
        ),
    ],
}
